@@ -74,6 +74,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/icons/hicolor/48x48/apps/rdlibraryb.png
 %{_datadir}/icons/hicolor/48x48/apps/rdlogeditb.png
 %{_datadir}/applications/rivendell-producer-*.desktop
+%{_datadir}/rivendell-producer/*
 %doc AUTHORS
 %doc ChangeLog
 %doc COPYING 
